Update input box with tab fix and click on line/col number in result to jump to line in question

--- a/jslint.css
+++ b/jslint.css
@@ -11,3 +11,7 @@ body {
 .card .list-group {
     text-align: justify;
 }
+
+#warn-card .list-group-item strong, #error-card .list-group-item strong {
+    cursor: pointer;
+}
